# wasmCloud

./: Cargo.toml  Dockerfile
.github/workflows/: charts.yml
charts/runtime-operator/: values.yaml
charts/runtime-operator/crds/: runtime.wasmcloud.dev_workloaddeployments.yaml  runtime.wasmcloud.dev_workloadreplicasets.yaml  runtime.wasmcloud.dev_workloads.yaml
crates/provider-keyvalue-redis/src/: lib.rs
crates/runtime/wit/: guest.wit  host.wit
crates/wash/: Cargo.toml
crates/wash-precompile/: Dockerfile
crates/wash-runtime/: Cargo.toml  build.rs
crates/wash-runtime/docs/: FILE_BACKED_MMAP_COMPILED_CACHE.md
crates/wash-runtime/src/: lib.rs  oci.rs  types.rs
crates/wash-runtime/tests/: integration_cron_service.rs  integration_http_allowed_hosts.rs  integration_http_blobstore.rs  integration_inter_component_call.rs  integration_nats_blobstore.rs  integration_smtp.rs
crates/wash-runtime/tests/fixtures/http-webgpu/: Cargo.toml
crates/wash-runtime/wit/: world.wit
crates/wash/src/: config.rs
examples/smtp-demo/src/: lib.rs
examples/smtp-demo/wit/: world.wit
examples/sqlx-socket-pg/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/sqlx-socket-pg/.wash/: config.yaml
examples/sqlx-socket-pg/certs/: ca.crt  server.crt
examples/sqlx-socket-pg/http-api/: ui.html
proto/docs/: index.html
runtime-gateway/: README.md  main.go  proxy.go  reconciler.go  reconciler_test.go  tracker.go  tracker_test.go
runtime-operator/: operator.go
runtime-operator/cmd/: main.go
tests/: example-rust-http-keyvalue-watcher.rs
(+34 files in other folders)
