[package]
name = "http-webgpu"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
flume = { workspace = true , features = ["spin"] }
wstd ={ workspace = true }
wgpu = { workspace = true , rev = "898122bf2cace048e63f065181a86459edb28205", default-features = false, features = ["wasi", "wgsl"] }
